fixed the white space on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,22 @@ body{
         overflow-x: hidden;
     }
 
-p {
+
+/*
+.hello {
+    float: right;
+    position: absolute;
+    display: block;
+    width: 50%;
+    padding: 0px;
+    margin-top: -145px;
+    padding-left: 15px;
+    margin-left: 160px;
+}
+*/
+
+
+
 /*    width: 100vw;*/
 /*    height: 100vh;*/
 /*    object-fit: cover;*/
@@ -200,14 +215,24 @@ p {
 /*    text-size-adjust: none;*/
 
 
+/*
   position: absolute;
   display: block;
   width: 80%;
   margin-top: -44%;
   margin-left: 55%;
-  max-width: 780px;
+  
+*/
+.hello {    
+    max-width: 780px;
+    position: absolute;
+    display: block;
+    width: 40%;
+    padding: 0px;
+    margin-top: -44%;
+    padding-left: 30%;
+    margin-left: 55%;
   font-size: 5vw;
-/*  font-family: 'Roboto Slab', Rockwell, Serif;*/
   font-family: 'Lato', sans-serif;
   font-weight: bold;
   color: #FFF;
@@ -217,11 +242,18 @@ p {
 
 }
 
-container img{
+.mepic{
     width: 100%;
     height: auto;
     display: block;
     position: relative;
+}
+
+.aboutpic {
+    object-fit: cover;
+    width: 100%;
+    height: 250%;
+    filter: opacity(5%);
 }
 
 .button {
@@ -232,11 +264,11 @@ container img{
 /*    font-family: 'Roboto Slab', Rockwell, Serif;*/
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-    line-height: 4vw;
+    line-height: 4.2vw;
     position: absolute;
   display: block;
   width: 20%;
-  margin-top: -27.5%;
+  margin-top: -26.5%;
   margin-left: 63.7%;
   max-width: 350px;
     color: white;
@@ -248,7 +280,7 @@ container img{
     padding-left: -20px;
     padding-right: -20px;
 */
-    font-size: 2vw;
+    font-size: 2.1vw;
 /*    font-size-adjust: none;*/
 /*    text-size-adjust: none;*/
     outline: none; 
@@ -261,13 +293,13 @@ container img{
     cursor: pointer;
 }
 
-#about h2 {
+h2 {
   position: absolute;
   display: block;
-  width: 80%;
+  width: 40%;
   margin-top: -55%;
   margin-left: 57%;
-  max-width: 500px;
+/*  max-width: 500px;*/
   font-size: 3.5vw;
 /*  font-family: 'Roboto Slab', Rockwell, Serif;*/
   font-family: 'Lato', sans-serif;
@@ -282,12 +314,10 @@ container img{
 #about span {
   position: absolute;
   display: block;
-  width: 50%;
+  width: 55%;
   margin-top: -40%;
-  margin-left: 44%;
-  max-width: 1200px;
-  font-size: 1.2vw;
-/*  font-family: 'Roboto Slab', Rockwell, Serif;*/
+  margin-left: 37.3%;
+  font-size: 1.4vw;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   color: #8dc1fd;
@@ -296,6 +326,7 @@ container img{
   word-wrap: break-word;
 }
 
+/*
 #about img {
     width: 100%;
     height: auto;
@@ -303,7 +334,11 @@ container img{
     position: relative; 
     filter: opacity(5%);
 }
+*/
 
+.sociallinks {
+    margin-top: 60px;
+}
 
 .arrow1 {
     position: absolute;
@@ -318,7 +353,7 @@ container img{
     position: absolute;
     display: block;
     width: 3%;
-    margin-top: -31.5%;
+    margin-top: -29.5%;
     margin-left: 8%;
 /*    max-width: 200px;*/  
 }
@@ -327,7 +362,7 @@ container img{
     position: absolute;
     display: block;
     width: 3%;
-    margin-top: -24%;
+    margin-top: -20.5%;
     margin-left: 8%;
 /*    max-width: 200px;*/  
 }
@@ -352,7 +387,7 @@ container img{
     display: block;
     width: 1%;
     max-width: 20px;
-    margin-top: -31%;
+    margin-top: -29%;
     margin-left: 13%;
     text-decoration: none;
 /*    font-family: 'Roboto Slab', Rockwell, Serif;*/
@@ -367,7 +402,7 @@ container img{
     display: block;
     width: 10%;
     max-width: 300px;
-    margin-top: -23.5%;
+    margin-top: -20%;
     margin-left: 13%;
     text-decoration: none;
 /*    font-family: 'Roboto Slab', Rockwell, Serif;*/
@@ -593,12 +628,22 @@ container img{
     margin-left: 30px;  
     }
     
+    .aboutpic {
+    object-fit: cover;
+    width: 100%;
+    height: 250%;
+    filter: opacity(5%);
+}
+    
+/*
     #about {
     width: 500px;
     height: auto;
     overflow: hidden;
     }
+*/
     
+/*
     #about img {
     width: 100%;
     height: auto;
@@ -608,6 +653,56 @@ container img{
     overflow: hidden;
     margin-left: -145px;
 }
+*/
+    
+/*
+    .hello {
+    float: right;
+    position: absolute;
+    display: block;
+    width: 50%;
+    padding: 0px;
+    margin-top: -145px;
+    padding-left: 15px;
+    margin-left: 160px;
+}
+*/
+  .sociallinks {
+    margin-top: -20px;
+}
+    
+  h2 {
+  position: absolute;
+  display: block;
+  width: 40%;
+  margin-top: -56%;
+  margin-left: 52%;
+/*  max-width: 500px;*/
+  font-size: 3.5vw;
+/*  font-family: 'Roboto Slab', Rockwell, Serif;*/
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  color: #000;
+  text-shadow: 0 .125em .125em rgba(0, 0, 0, .5);
+  padding: .6em 1em .6em 1.7em;
+  
+}
+    
+    #about span {
+  position: absolute;
+  display: block;
+  width: 75%;
+  margin-top: -41%;
+  margin-left: 12%;
+  font-size: 1.6vw;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  color: #8dc1fd;
+  padding: .6em 1em .6em 1.7em;
+  filter: opacity(100%);
+  word-wrap: break-word;
+}
+    
     
     .header .logo {
   display: block;
@@ -697,15 +792,16 @@ video {
 }
 
     
-#about h2 {
+/*
+h2 {
   position: absolute;
   display: block;
-  width: 80%;
+  width: 60%;
   margin-top: -55%;
   margin-left: 50%;
   max-width: 500px;
   font-size: 4vw;
-/*  font-family: 'Roboto Slab', Rockwell, Serif;*/
+
   font-family: 'Lato', sans-serif;
   font-weight: bold;
   color: #000;
@@ -722,7 +818,7 @@ video {
   margin-left: 10%;
   max-width: 1200px;
   font-size: 2vw;
-/*  font-family: 'Roboto Slab', Rockwell, Serif;*/
+
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   color: #8dc1fd;
@@ -730,13 +826,14 @@ video {
   filter: opacity(100%);
   word-wrap: break-word;
 }
+*/
 
 .arrow1 {
     position: absolute;
     display: block;
     width: 3%;
     margin-top: -0.5%;
-    margin-left: 14%;
+    margin-left: 14.5%;
 /*    max-width: 200px;*/  
 }
 
@@ -745,7 +842,7 @@ video {
     display: block;
     width: 3%;
     margin-top: -0.5%;
-    margin-left: 44%;
+    margin-left: 43%;
 /*    max-width: 200px;*/  
 }
 
@@ -754,7 +851,7 @@ video {
     display: block;
     width: 3%;
     margin-top: -0.5%;
-    margin-left: 74%;
+    margin-left: 72%;
 /*    max-width: 200px;*/  
 }
 
@@ -764,7 +861,7 @@ video {
     width: 1%;
     max-width: 20px;
     margin-top: 0%;
-    margin-left: 20%;
+    margin-left: 20.5%;
     text-decoration: none;
 /*    font-family: 'Roboto Slab', Rockwell, Serif;*/
     font-family: 'Lato', sans-serif;
@@ -779,7 +876,7 @@ video {
     width: 1%;
     max-width: 20px;
     margin-top: 0%;
-    margin-left: 50%;
+    margin-left: 49%;
     text-decoration: none;
 /*    font-family: 'Roboto Slab', Rockwell, Serif;*/
     font-family: 'Lato', sans-serif;
@@ -794,7 +891,7 @@ video {
     width: 10%;
     max-width: 300px;
     margin-top: 0%;
-    margin-left: 80%;
+    margin-left: 78%;
     text-decoration: none;
 /*    font-family: 'Roboto Slab', Rockwell, Serif;*/
     font-family: 'Lato', sans-serif;
